# Project2-Number-Algorithms

./: .README.md.un~  README.md  README.md~  stats.xlsx
Project2-Character-Recognition/: 2x2_XOR_excel_example.xlsx  CMakeLists.txt  README.md  hid_out_w.txt  hidden_layer_characterRecognition.txt  input_hid_w.txt  lossCharacterTraining.csv  lossCharacterTrainingLossValues.csv  lossXorTraining.csv  lossXorTrainingLossValues.csv  softMax_prob_characterRecognition.txt  softmax_prob_XOR.txt  trainingdata.txt  weightsA_XOR.txt  weightsA_characterRecognition.txt  weightsB_XOR.txt  weightsB_characterRecognition.txt  weights_XOR.txt
Project2-Character-Recognition/character_recognition/: CMakeLists.txt  common.cu  common.h  functions.cu  functions.h  mlp.cu  mlp.cu_back  mlp.h
Project2-Character-Recognition/data-set/: weights_hidden_output.txt
Project2-Character-Recognition/img/: filterA.txt  normalA.txt
Project2-Character-Recognition/src/: main.cpp  main.cpp_back  testing_helpers.hpp
Project2-Character-Recognition/weights/: 52-156-trainrecord-run1.csv  52-156-trainrecord-run1a.csv  52-156-trainrecord-run3.csv  52-156-trainrecord-run4.csv  52-164-trainrecord-run1b.csv  52-256-trainrecord-run2.csv  52-256-trainrecord-run3.csv  52-256-trainrecord-run4.csv  52-256-trainrecord-run5.csv  52-256-trainrecord-run6.csv  52-256-trainrecord-run7.csv  52-800-trainrecord-run1.csv  52-800-trainrecord-run2.csv  52-800-trainrecord-run3.csv  (+6 more)
Project2-Stream-Compaction/: .gitignore  CMakeLists.txt  Performance Plots.xlsx  README.html  README.md  proj2_compact_data.xlsx  test_blockSize.bat
(+67 files in other folders)
